--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     ],
     "require": {
-        "php" : "~7.1"
+        "php": "~7.1",
+        "fzaninotto/faker": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=7.0",
