--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
     "description": "",
     "keywords": [
         "feffel",
-        "felfactory"
+        "felfactory",
+        "faker",
+        "generation",
+        "data",
+        "model"
     ],
     "homepage": "https://github.com/feffel/felfactory",
     "license": "MIT",
@@ -16,22 +20,33 @@
             "role": "Developer"
         }
     ],
+    "repositories": {
+        "php-di\\phpdoc-reader": {
+            "type": "vcs",
+            "url": "https://github.com/feffel/PhpDocReader"
+        }
+    },
     "require": {
         "php": "~7.1",
-        "fzaninotto/faker": "^1.8"
+        "fzaninotto/faker": "^1.8",
+        "haydenpierce/class-finder": "^0.3.1",
+        "php-di/phpdoc-reader": "dev-master",
+        "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
-        "phpunit/phpunit" : ">=7.0",
-        "squizlabs/php_codesniffer": "^3.0"
+        "mockery/mockery": "^1.2",
+        "phpunit/phpunit": ">=7.0",
+        "squizlabs/php_codesniffer": "^3.0",
+        "symfony/var-dumper": "^4.2"
     },
     "autoload": {
         "psr-4": {
-            "feffel\\felfactory\\": "src"
+            "felfactory\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "feffel\\felfactory\\": "tests"
+            "felfactory\\tests\\": "tests"
         }
     },
     "scripts": {
