add coverage reporting

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 dist: trusty
 language: php
-
+env:
+    global:
+        - CC_TEST_REPORTER_ID=645ecdff29a40f351cdc725b83bd8fd5f88828be3994b01612d065fff0e06dd1
 php:
-  - 7.1
-  - 7.2
-  - 7.3
+    - 7.1
+    - 7.2
+    - 7.3
 
 # This triggers builds to run on the new TravisCI infrastructure.
 # See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
@@ -12,19 +14,21 @@ sudo: false
 
 ## Cache composer
 cache:
-  directories:
-    - $HOME/.composer/cache
+    directories:
+        - $HOME/.composer/cache
 
 before_script:
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
+    - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+    - chmod +x ./cc-test-reporter
+    - if [ $(phpenv version-name) = "7.1" ]; then ./cc-test-reporter before-build; fi
+    - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
 
 script:
-  - vendor/bin/phpcs --standard=psr2 src/
-  - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+    - vendor/bin/phpcs --standard=psr2 src/
+    - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
 
 after_script:
-  - |
-    if [[ "$TRAVIS_PHP_VERSION" != 'hhvm' ]]; then
-      wget https://scrutinizer-ci.com/ocular.phar
-      php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-    fi
+    - |
+        if [ $(phpenv version-name) = "7.1" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ];
+        then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT;
+        fi
