--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "require-dev": {
         "mockery/mockery": "^1.2",
         "phpunit/phpunit": ">=7.0",
+        "psy/psysh": "^0.9.9",
         "squizlabs/php_codesniffer": "^3.0",
         "symfony/var-dumper": "^4.2"
     },
