--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_script:
     - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
 
 script:
+    - vendor/bin/psalm
     - vendor/bin/phpcs --standard=psr2 src/
     - vendor/bin/phpunit --coverage-text
 
