--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "phpunit/phpunit": ">=7.0",
         "psy/psysh": "^0.9.9",
         "squizlabs/php_codesniffer": "^3.0",
-        "symfony/var-dumper": "^4.2"
+        "symfony/var-dumper": "^4.2",
+        "vimeo/psalm": "^3.2"
     },
     "autoload": {
         "psr-4": {
