--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": "~7.2",
         "fzaninotto/faker": "^1.8",
         "haydenpierce/class-finder": "^0.3.1",
+        "mustangostang/spyc": "^0.6.2",
         "php-di/phpdoc-reader": "dev-master",
         "vlucas/phpdotenv": "^3.3"
     },
