add yaml loader

--- a/tests/TestModels/confs/conf.yaml
+++ b/tests/TestModels/confs/conf.yaml
@@ -1,4 +1,4 @@
 
 felfactory\tests\TestModels\SimpleEmbeddedModel:
-    - firstName: 'firstName'
-    - lastName: 'lastName'
+    firstName: 'firstName'
+    lastName: 'lastName'
