--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,13 @@
 # Path-based git attributes
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
 
-# Ignore all test and documentation with "export-ignore".
-/.editorconfig               export-ignore
+# Ignore all dev configuration, tests and documentation with "export-ignore".
 /.gitattributes              export-ignore
 /.gitignore                  export-ignore
-/.scrutinizer.yml            export-ignore
-/.styleci.yml                export-ignore
 /.travis.yml                 export-ignore
+/.psalm.xml                  export-ignore
+/Makefile                    export-ignore
+/Dockerfile                  export-ignore
 /PULL_REQUEST_TEMPLATE.md    export-ignore
 /ISSUE_TEMPLATE.md           export-ignore
 /phpcs.xml.dist              export-ignore
