--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require": {
         "php": "~7.2",
+        "doctrine/annotations": "^1.6",
         "fzaninotto/faker": "^1.8",
         "haydenpierce/class-finder": "^0.3.1",
         "mustangostang/spyc": "^0.6.2",
