--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,8 @@
         "php": "~7.2",
         "doctrine/annotations": "^1.6",
         "fzaninotto/faker": "^1.8",
-        "haydenpierce/class-finder": "^0.3.1",
         "mustangostang/spyc": "^0.6.2",
-        "php-di/phpdoc-reader": "dev-master",
-        "vlucas/phpdotenv": "^3.3"
+        "php-di/phpdoc-reader": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
