--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require": {
         "php": "~7.2",
         "doctrine/annotations": "^1.6",
+        "doctrine/lexer": "^1.0",
         "fzaninotto/faker": "^1.8",
         "mustangostang/spyc": "^0.6.2"
     },
