use new parser and statement executor

--- a/tests/TestModels/confs/conf.yaml
+++ b/tests/TestModels/confs/conf.yaml
@@ -1,4 +1,4 @@
 felfactory\tests\TestModels\SimpleTestModelYamlConfig:
-    firstName: 'firstName'
-    lastName: 'lastName'
-    age: 'numberBetween(18, 59)'
+    firstName: "generate('firstName')"
+    lastName: "generate('lastName')"
+    age: "generate('numberBetween(18, 59)')"
